# ocx-validator

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  footer.html  pyproject.toml  pytest.ini  setup.cfg  setup.py  sonar-project.properties
ocx_validator/: app.py
ocx_validator/schema/: __init__.py  schema.py  utils.py  validator.py
ocx_validator/tests/: conftest.py  context.py  test_app.py
resources/: validator_banner.html  validator_footer.html
resources/extensions/: rudder.properties
resources/ocx/: ocx.properties
resources/ocx/v2.8.6/xsd/: OCX_Schema.xsd
resources/ocx/v3.0.0b3/xsd/: OCX_Schema.xsd
resources/ocx/v3.0.0b4/xsd/: OCX_Schema.xsd
resources/ocx/v3.0.0b6/: OCX_Schema.xsd
resources/ocx/v3.0.0rc2/xsd/: OCX_Schema.xsd
resources/ocx/v3.0.0rc3/xsd/: OCX_Schema.xsd
resources/ocx/v3.0.0rc6/xsd/: OCX_Schema.xsd
resources/ocx/working_draft/xsd/: OCX_Schema.xsd
resources/schematron/: schematron.properties
resources/schematron/v2.8.6/sch/: plateRules.sch
resources/schematron/v3.0.0b4/sch/: plateRules.sch  rules.sch  schematron_rules.sch  unique_guids.sch
resources/schematron/v3.0.0b6/sch/: plateRules.sch
resources/schematron/v3.0.0rc1/sch/: unique_guids.sch
rudder/extensions/: rudder.properties
rudder/xsd/: OCX_ext_rudder.xsd  unitsmlSchema_lite-0.9.18.xsd
schema_versions/: OCX_Schema_V286.xsd  unitsmlSchema_lite-0.9.18.xsd
schematron/: rules.sch  unique_guids.sch
